updated some tags

--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
       content="Simple Rock Paper Scissors game with best UI you can view your last five(5) plays in history and you can view the score"
     />
     <meta name="robots" content="index,follow" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Rock, Paper, Scissors | Made by Vishal Ch" />
-    <meta property="og:description" content="Simple rock paper scissors game with best UI you can view your last five(5) plays in history and you can view the score" />
-    <meta property="og:image" content="./images/favicon.svg" />
-    <!-- <meta property="og:url" content="" />
-    <meta property="og:site_name" content="SITE NAME" /> -->
+    <meta property="og:type" content="game" />
+    <meta
+      property="og:title"
+      content="Rock, Paper, Scissors | Made by Vishal Ch"
+    />
+    <meta
+      property="og:description"
+      content="Simple rock paper scissors game with best UI you can view your last five(5) plays in history and you can view the score"
+    />
+    <meta property="og:image" content="./images/desk-sshot.png" />
+    <meta
+      property="og:url"
+      content="https://vshal-ch.github.io/Rock-paper-scissors/"
+    />
+    <meta name="twitter:card" content="app">
+    <meta name="twitter:title" content="Rock, Paper, Scissors | Made by Vishal Ch" />
+    <meta name="twitter:description" content="Simple rock paper scissors game with best UI you can view your last five(5) plays in history and you can view the score" />
+    <meta name="twitter:image" content="./images/desk-sshot.png" />
+    <meta name=”twitter:url” content=”https://vshal-ch.github.io/Rock-paper-scissors/” />
+    <meta name="twitter:site" content="@USERNAME" />
+    <meta name="twitter:creator" content="@USERNAME" />
 
     <link
       rel="icon"
@@ -131,7 +146,7 @@
             <a href="https://www.github.com/vshal-ch" target="_blank">Me</a>.
             Checkout my other
             <a
-              href="https://vshal-ch.github.io/Memory_Game-with-emojis/"
+              href="https://vshal-ch.github.io/Memory_Game-with-emojis"
               target="_blank"
               >Game</a
             >
