--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       property="og:url"
       content="https://vshal-ch.github.io/Rock-paper-scissors/"
     />
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Rock, Paper, Scissors | Made by Vishal Ch" />
     <meta name="twitter:description" content="Simple rock paper scissors game with best UI you can view your last five(5) plays in history and you can view the score" />
-    <meta name="twitter:image:src" content="./images/desk-sshot.png" />
+    <meta name="twitter:image:src" content="https://vshal-ch.github.io/Rock-paper-scissors/" />
     <meta name=”twitter:url” content=”https://vshal-ch.github.io/Rock-paper-scissors/” />
 
     <link
